--- a/src/GenericDataStructures/Result.tt
+++ b/src/GenericDataStructures/Result.tt
@@ -14,7 +14,7 @@ namespace GenericDataStructures
 #>
     public class <#= GetClassName(failureTypes) #>
     {
-        private readonly object? _value;
+        private readonly object _value;
         private readonly byte? _failureTypeIndex;
 
         public Result(TSuccess value)
@@ -52,24 +52,24 @@ namespace GenericDataStructures
         {
             if (IsSuccess)
             {
-                action((TSuccess)_value!);
+                action((TSuccess)_value);
             }
         }
 
         public TOutput Match<TOutput>(Func<TSuccess, TOutput> onSuccessFunc, <# Write(string.Join(", ", Enumerable.Range(1, failureTypes).Select(failureNumber => $"Func<TFailure{failureNumber}, TOutput> onFailure{failureNumber}Func"))); #>)
         {
-            return _failureTypeIndex switch
+            switch (_failureTypeIndex)
             {
 <#
     for(int failureIndex = 0; failureIndex < failureTypes; failureIndex++)
     {
 #>
-                <#= failureIndex #> => onFailure<#= failureIndex + 1 #>Func((TFailure<#= failureIndex + 1 #>)_value!),
+                case <#= failureIndex #>: return onFailure<#= failureIndex + 1 #>Func((TFailure<#= failureIndex + 1 #>)_value);
 <#
     }
 #>
-                _ => onSuccessFunc((TSuccess)_value!)
-            };
+                default: return onSuccessFunc((TSuccess)_value);
+            }
         }
 
         public void Match(Action<TSuccess> onSuccessAction, <# Write(string.Join(", ", Enumerable.Range(1, failureTypes).Select(failureNumber => $"Action<TFailure{failureNumber}> onFailure{failureNumber}Action"))); #>)
@@ -80,11 +80,11 @@ namespace GenericDataStructures
     for(int failureIndex = 0; failureIndex < failureTypes; failureIndex++)
     {
 #>
-                case <#= failureIndex #>: onFailure<#= failureIndex + 1 #>Action((TFailure<#= failureIndex + 1 #>)_value!); break;
+                case <#= failureIndex #>: onFailure<#= failureIndex + 1 #>Action((TFailure<#= failureIndex + 1 #>)_value); break;
 <#
     }
 #>
-                default: onSuccessAction((TSuccess)_value!); break;
+                default: onSuccessAction((TSuccess)_value); break;
             }
         }
     }
