--- a/src/GenericDataStructures/VoidResult.tt
+++ b/src/GenericDataStructures/VoidResult.tt
@@ -8,7 +8,7 @@ using System;
 
 namespace GenericDataStructures
 {
-    public class VoidResult
+    public sealed class VoidResult
     {
         public static readonly VoidResult Success = new VoidResult();
 
