--- a/src/GenericDataStructures/Union.tt
+++ b/src/GenericDataStructures/Union.tt
@@ -69,6 +69,19 @@ namespace GenericDataStructures
                 default: throw new InvalidOperationException();
             }
         }
+
+        public override bool Equals(object obj)
+        {
+            return ReferenceEquals(this, obj) || (obj is <#= GetClassName(types) #> other && Equals(_value, other._value) && _typeIndex == other._typeIndex);
+        }
+
+        public override int GetHashCode()
+        {
+            unchecked
+            {
+                return ((_value != null ? _value.GetHashCode() : 0) * 397) ^ _typeIndex.GetHashCode();
+            }
+        }
     }
 <#
     if (types != GetNumberOfTypes())
