Added ToString override which uses underlying types ToString method.

--- a/src/GenericDataStructures/Result.tt
+++ b/src/GenericDataStructures/Result.tt
@@ -127,6 +127,11 @@ namespace GenericDataStructures
                 return ((_value != null ? _value.GetHashCode() : 0) * 397) ^ _failureTypeIndex.GetHashCode();
             }
         }
+
+        public override string ToString()
+        {
+            return _value != null ? _value.ToString() : string.Empty;
+        }
     }
 <#
     if (failureTypes != GetNumberOfFailureTypes())
