--- a/src/GenericDataStructures/VoidResult.tt
+++ b/src/GenericDataStructures/VoidResult.tt
@@ -15,6 +15,11 @@ namespace GenericDataStructures
         private VoidResult()
         {
         }
+
+        public override string ToString()
+        {
+            return "GenericDataStructures.VoidResult.Success";
+        }
     }
 
 <#
@@ -99,6 +104,11 @@ namespace GenericDataStructures
             {
                 return ((_value != null ? _value.GetHashCode() : 0) * 397) ^ _failureTypeIndex.GetHashCode();
             }
+        }
+
+        public override string ToString()
+        {
+            return _failureTypeIndex != null ? (_value != null ? _value.ToString() : string.Empty) : VoidResult.Success.ToString();
         }
     }
 <#
