--- a/src/GenericDataStructures/Union.tt
+++ b/src/GenericDataStructures/Union.tt
@@ -5,6 +5,7 @@
 <#@ import namespace="System.Collections.Generic" #>
 <#@ output extension=".cs" #>
 using System;
+using JetBrains.Annotations;
 
 namespace GenericDataStructures
 {
@@ -38,7 +39,7 @@ namespace GenericDataStructures
 <#
     }
 #>
-        public TOutput Map<TOutput>(<# Write(string.Join(", ", Enumerable.Range(1, types).Select(number => $"Func<T{number}, TOutput> onT{number}Func"))); #>)
+        public TOutput Map<TOutput>(<# Write(string.Join(", ", Enumerable.Range(1, types).Select(number => $"[InstantHandle]Func<T{number}, TOutput> onT{number}Func"))); #>)
         {
             switch (_typeIndex)
             {
@@ -54,7 +55,7 @@ namespace GenericDataStructures
             }
         }
 
-        public void Switch(<# Write(string.Join(", ", Enumerable.Range(1, types).Select(number => $"Action<T{number}> onT{number}Action"))); #>)
+        public void Switch(<# Write(string.Join(", ", Enumerable.Range(1, types).Select(number => $"[InstantHandle]Action<T{number}> onT{number}Action"))); #>)
         {
             switch (_typeIndex)
             {
