--- a/src/GenericDataStructures/VoidResult.tt
+++ b/src/GenericDataStructures/VoidResult.tt
@@ -74,11 +74,23 @@ namespace GenericDataStructures
     for(int failureIndex = 0; failureIndex < failureTypes; failureIndex++)
     {
 #>
-                case <#= failureIndex #>: return onFailure<#= failureIndex + 1 #>Func((TFailure<#= failureIndex + 1 #>)_value);
+                case <#= failureIndex #>:
+                    if (onFailure<#= failureIndex + 1 #>Func == null)
+                    {
+                        throw new ArgumentException($"No map function provided for {typeof(TFailure<#= failureIndex + 1 #>).Name}");
+                    }
+
+                    return onFailure<#= failureIndex + 1 #>Func((TFailure<#= failureIndex + 1 #>)_value);
 <#
     }
 #>
-                default: return onSuccessFunc();
+                default:
+                    if (onSuccessFunc == null)
+                    {
+                        throw new ArgumentException($"No map function provided for success result");
+                    }
+
+                    return onSuccessFunc();
             }
         }
 
@@ -90,11 +102,25 @@ namespace GenericDataStructures
     for(int failureIndex = 0; failureIndex < failureTypes; failureIndex++)
     {
 #>
-                case <#= failureIndex #>: onFailure<#= failureIndex + 1 #>Action((TFailure<#= failureIndex + 1 #>)_value); break;
+                case <#= failureIndex #>:
+                    if (onFailure<#= failureIndex + 1 #>Action == null)
+                    {
+                        throw new ArgumentException($"No switch action provided for {typeof(TFailure<#= failureIndex + 1 #>).Name}");
+                    }
+
+                    onFailure<#= failureIndex + 1 #>Action((TFailure<#= failureIndex + 1 #>)_value);
+                    break;
 <#
     }
 #>
-                default: onSuccessAction(); break;
+                default:
+                    if (onSuccessAction == null)
+                    {
+                        throw new ArgumentException($"No switch action provided for success result");
+                    }
+
+                    onSuccessAction();
+                    break;
             }
         }
 
