--- a/src/GenericDataStructures/VoidResult.tt
+++ b/src/GenericDataStructures/VoidResult.tt
@@ -13,25 +13,11 @@ using NotNullAttribute = JetBrains.Annotations.NotNullAttribute;
 
 namespace GenericDataStructures
 {
-    public sealed class VoidResult
-    {
-        public static readonly VoidResult Success = new VoidResult();
-
-        private VoidResult()
-        {
-        }
-
-        public override string ToString()
-        {
-            return "GenericDataStructures.VoidResult.Success";
-        }
-    }
-
 <#
     for(int failureTypes = 1; failureTypes <= GetNumberOfFailureTypes(); failureTypes++)
     {
 #>
-    public class <#= GetClassName(failureTypes) #>
+    public struct <#= GetClassName(failureTypes) #>
     {
         private readonly object _value;
         private readonly byte? _failureTypeIndex;
@@ -49,13 +35,9 @@ namespace GenericDataStructures
 <#
     }
 #>
-        private VoidResult(VoidResult value)
-        {
-        }
-
         public bool IsSuccess => !_failureTypeIndex.HasValue;
 
-        public static implicit operator <#= GetClassName(failureTypes) #>(VoidResult value) => new <#= GetClassName(failureTypes) #>(value);
+        public static implicit operator <#= GetClassName(failureTypes) #>(VoidResult value) => default(<#= GetClassName(failureTypes) #>);
 
 <#
     for(int failureIndex = 0; failureIndex < failureTypes; failureIndex++)
@@ -66,6 +48,10 @@ namespace GenericDataStructures
 <#
     }
 #>
+        public static bool operator ==(<#= GetClassName(failureTypes) #> left, <#= GetClassName(failureTypes) #> right) => Equals(left, right);
+
+        public static bool operator !=(<#= GetClassName(failureTypes) #> left, <#= GetClassName(failureTypes) #> right) => !Equals(left, right);
+
         public TOutput Map<TOutput>([InstantHandle][NotNull]Func<TOutput> onSuccessFunc, <# Write(string.Join(", ", Enumerable.Range(1, failureTypes).Select(failureNumber => $"[InstantHandle][NotNull]Func<TFailure{failureNumber}, TOutput> onFailure{failureNumber}Func"))); #>)
         {
             switch (_failureTypeIndex)
@@ -126,7 +112,7 @@ namespace GenericDataStructures
 
         public override bool Equals(object obj)
         {
-            return ReferenceEquals(this, obj) || (obj is <#= GetClassName(failureTypes) #> other && Equals(_value, other._value) && _failureTypeIndex == other._failureTypeIndex);
+            return obj is <#= GetClassName(failureTypes) #> other && Equals(_value, other._value) && _failureTypeIndex == other._failureTypeIndex;
         }
 
         public override int GetHashCode()
@@ -142,15 +128,23 @@ namespace GenericDataStructures
             return _failureTypeIndex != null ? (_value != null ? _value.ToString() : string.Empty) : VoidResult.Success.ToString();
         }
     }
-<#
-    if (failureTypes != GetNumberOfFailureTypes())
-    {
-        Write(Environment.NewLine);
-    }    
-#>
+
 <#
     }
 #>
+    public class VoidResult
+    {
+        public static readonly VoidResult Success = new VoidResult();
+
+        private VoidResult()
+        {
+        }
+
+        public override string ToString()
+        {
+            return "GenericDataStructures.VoidResult.Success";
+        }
+    }
 }
 <#+
 private int GetNumberOfFailureTypes()
