--- a/src/GenericDataStructures/VoidResult.tt
+++ b/src/GenericDataStructures/VoidResult.tt
@@ -21,7 +21,11 @@ namespace GenericDataStructures
     {
         public static readonly <#= GetClassName(failureTypes) #> Success = default(<#= GetClassName(failureTypes) #>);
 
+#if NULLABLE_REFERENCE_TYPES_SUPPORTED
+        private readonly object? _value;
+#else
         private readonly object _value;
+#endif
         private readonly byte? _failureTypeIndex;
 
 <#
